# regular-regexes

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
regexes/: regexes.json
regular_regexes/: dev.ipynb  dev.py  regexes.json  regular_regexes.py
rre/: __init__.py  regexes.json  regular_regexes.py
tests/: test_regular_regexes.py
