[metadata]
name = regular_regexes
version = 0.0.3
author = Upshift
author_email = contact@upshift.be
description = Simplify the usage of common regexes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/upshiftbe/regular-regexes
project_urls =
    Bug Tracker = https://github.com/upshiftbe/regular-regexes/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = regular_regexes
packages = find:
python_requires = >=3.6

[options.packages.find]
where = regular_regexes