[metadata]
name = rre
version = 0.0.6
author = Upshift
author_email = hello@upshift.be
description = Simplify the usage of common regexes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/upshiftbe/regular-regexes
project_urls =
    Bug Tracker = https://github.com/upshiftbe/regular-regexes/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = rre
package_dir =
    = .
python_requires = >=3.6

[options.packages.find]
where = .

[options.package_data]
rre = regexes.json